# stunnel-ios

./: .gitignore  AGENTS.md  GEMINI.md  README.md  build.sh
rust-core/: Cargo.toml
rust-core/src/: config.rs  engine.rs  lib.rs  tcp.rs
stunnel-core/: Cargo.toml
stunnel-core/include/: rust_core.h  stunnel_core.h
stunnel-core/src/: config.rs  connection.rs  engine.rs  lib.rs  tcp.rs  udp.rs  utils.rs
stunnel-ios/: PacketTunnel.entitlements  project.yml  stunnel-ios.entitlements
stunnel-ios/App/: ContentView.swift  VPNManager.swift  stunnel_iosApp.swift
stunnel-ios/PacketTunnel/: Info.plist  PacketTunnelProvider+Rust.swift  PacketTunnelProvider.swift
stunnel-ios/Shared/: PacketTunnelRuntimeCoordinator.swift  RustBridge.h  TunnelProviderStore.swift  VPNConfig.swift
stunnel-ios/Tests/: PacketTunnelRuntimeCoordinatorTests.swift  VPNConfigErrorTests.swift  VPNConfigTests.swift  VPNManagerTests.swift
