[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
tokio = { version = "1.43", features = ["full"] }
smoltcp = { version = "0.12", features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-udp", "socket-tcp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
stunnel = { git = "https://github.com/airtrack/stunnel.git" }
bytes = "1.10"
